fixed the visibility issue in create post in dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@ body{
 }
 
 .ql-editor{
+  color: #6C7A89;
   font-size: 1.05rem;
 }
 
